# gbintk

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: codeql.yml  draft_pdf.yml  testing_python_app.yml
docs/: citation.md  evaluate.md  graphbin2_intro.md  graphbin2_preprocess.md  graphbin2_usage.md  graphbin_intro.md  graphbin_preprocess.md  graphbin_usage.md  index.md  install.md  metacoag_intro.md  metacoag_preprocess.md  metacoag_usage.md  prepare.md  visualise.md
paper/: paper.bib  paper.md
src/gbintk/: __init__.py  cli.py
src/gbintk/support/: __init__.py  evaluate.py  prep_result.py  visualise_result_Flye.py  visualise_result_MEGAHIT.py  visualise_result_SPAdes.py
tests/: test_cli.py  test_cli_graphbin.py  test_cli_graphbin2.py  test_cli_metacoag.py  test_evaluate.py  test_gbintk.py  test_prepare.py  test_visualise.py
tests/data/1Y3B_Flye/: assembly.fasta.hmmout  graphbin_output.csv
tests/data/5G_MEGAHIT/: graphbin_output.csv  initial_contig_bins.csv
tests/data/5G_metaSPAdes/: graphbin_res.csv  ground_truth.csv  metacoag_res.csv
tests/data/5G_metaSPAdes/initial_bins/: contigs.bin.1.fa
tests/data/Sim-5G+metaSPAdes/: graphbin_res.csv
