[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gbintk"
authors = [{name = "Vijini Mallawaarachchi", email = "viji.mallawaarachchi@gmail.com"}]
keywords = ["metagenomics", "binning", "contigs", "bioinformatics"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.13"
dependencies = ["click",
  "cogent3",
  "igraph",
  "cairocffi",
  "pycairo",
  "networkx",
  "scipy",
  "numpy",
  "pandas",
  "tqdm",
  "tabulate",
  "graphbin",
  "graphbin2>=1.3.3",
  "metacoag>=1.2.1"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Operating System :: MacOS",
        "Operating System :: POSIX",
        "Programming Language :: Python :: 3",
    ]
# the following are inferred from the source code
dynamic = ["version", "description"]

[project.sdist]
include = ["doc/", "requirements.txt", "src/*", "pyproject.toml"]
exclude = ["doc/*.html"]

[project.scripts]
gbintk = "gbintk.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pillow>10,<11",
]
dev = [
    "black",
    "click",
    "flit",
    "isort==5.13.2",
    "gbintk[test]",
]